# test

./: README.md
mini_pupper_examples/: COPYRIGHT_README.md  README.md  package.xml  setup.cfg  setup.py
mini_pupper_examples/launch/: head_pose_synchronization.launch.py  object_tracking.launch.py
mini_pupper_examples/mini_pupper_examples/head_pose_synchronization/: ORIGINAL_LICENSE  ORIGINAL_README.md  human_head_pose_estimation.py  pupper_head_pose_sync.py
mini_pupper_examples/mini_pupper_examples/install_scripts/: head_pose_synchronization_install.sh  object_tracking_install.sh
mini_pupper_examples/mini_pupper_examples/object_tracking/: object_class_list.txt  object_tracking.py
mini_pupper_examples/test/: test_copyright.py
mini_pupper_navigation/launch/: slam.launch.py
