<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mini_pupper_examples</name>
  <version>1.0.0</version>
  <description>Example demo files for the Mini Pupper robot.</description>
  <maintainer email="fae@mangdang.net">Mangdang</maintainer>
  <license>Apache-2.0</license>
  <url type="website">https://www.mangdang.net/</url>
  <url type="repository">https://github.com/mangdangroboticsclub/mini_pupper_ros.git</url>
  <author email="thefoxfoxfox@outlook.com">0nhc</author>
  <author email="hermanye233@icloud.com">Herman Ye</author>

  <depend>geometry_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>rclpy</depend>
  <depend>ros2launch</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
